chore: Initial replacement of docker builder